
2008-08-25 - Release Version: 0.1.2
2008-08-24 - Release Version: 0.1.1.2

  - (Issue 15) FirePHP does not display messages in the console with latest version of Firebug
	- (Issue 10) Prevent "not well-formed error" in JS console when loading processor and renderer
	- (Issue 14) Updated wildfire protocol to wrap header message values with "|"
	- Updated Net panel override to make it consistent with latest changes in fb 1.2

2008-07-31 - Release Version: 0.1.1.1
2008-07-31 - Release Version: 0.1.1

	- Nothing changed

2008-07-30 - Release Version: 0.1.0.8

	- Bugfix - CSS style not added when FirePHP first loads
	- Updated rendering of null, false and true in Variable Viewer

2008-07-30 - Release Version: 0.1.0.7

  - Display object class name if __className key found in data
	- Bugfix - Display null values properly in variable inspector
  - Bugfix - Show dumped variables in "Server" request tab if using wildfire
	- Bugfix - FF3 - Messages not showing in console when Firebug is detached
	- Bugfix - Fix loading of custom processors and renderers

2008-07-23 - Release Version: 0.1.0.5

	- Updated plugin URI for FirePHP Wildfire plugin

2008-07-22 - Release Version: 0.1.0.4

  - Bugfix - Gray background for variable viewer on windows
  - Added icon for FirePHP Headquarters link in FirePHP menu and updated style
	- Bugfix - Trace and exception logging broke when function/method argument was "false" or "null"

2008-07-17 - Release Version: 0.1.0.3

	- Minor bugfix in request processor
	- Added support for the wildfire JsonStream protocol to communicate with the Zend Framework component

2008-07-13 - Release Version: 0.1.0.2

	- Added X-FirePHP-Agent request header when visiting FirePHP related sites
	- Launch Welcome page once every time FirePHP is upgraded
	- Added link to welcome page in menus
	- Added links to important sites to menu
	- Added ability to enable and disable FirePHP from menu
	- Added FirePHP menu next to Firebug menu in Firebug UI